# SpikeInterface-Training-Milan-Sept25

./: LICENSE  README.md
notebooks/: Step01-read-data-and-object-manipulaton.ipynb  Step02-preprocessing.ipynb  Step03-run-sorters.ipynb  Step04-analyze-sorting.ipynb  Step05-curation.ipynb  invitro_notebook.ipynb  pyproject.toml  tetrode_pipeline.ipynb
