[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "hdbscan>=0.8.40",
    "jupyterlab>=4.4.7",
    "kilosort==4.0.39",
    "https://github.com/NeuralEnsemble/python-neo/archive/master.zip",
    "https://github.com/SpikeInterface/spikeinterface/archive/main.zip[full,widgets]",
    "PySide6<6.8",
    "pyqtgraph",
    "https://github.com/SpikeInterface/spikeinterface-gui/archive/main.zip",
    "ephyviewer",
]

